@@ -197,8 +197,8 @@
  */
 
 /* 
- */
 #define DEBUG
+ */
 
 #ifdef HAVE_CONFIG_H
 #include <config.h>
